# todo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
config/: wt_config.xml
include/core/: application.h
include/note/: note.h  notestore.h
include/ui/: component.h  noteviewcontroller.h  noteviewmodel.h  uiconstants.h  uihelpers.h
resources/: form.css
resources/components/: todo-components.xml
resources/pages/: auth.xml  main-layout.xml  todo.xml
resources/style/: main-content.css
src/: main.cpp  todo.hpp
src/application/: session.cpp  session.hpp  user.cpp  user.hpp
src/components/: todo_item_view.cpp  todo_item_view.hpp  todo_view.cpp  todo_view.hpp
src/core/: application.cpp
src/models/: user_details.cpp  user_details.hpp
src/note/: note.cpp  notestore.cpp
src/pages/: authentication_page.cpp  authentication_page.hpp  registration_view.cpp  registration_view.hpp  todo_page.cpp  todo_page.hpp
src/ui/: Component.cpp  noteviewcontroller.cpp  noteviewmodel.cpp
